Color ramp HSV, Far-mode have wrong behavior #49979

Closed
opened 2016-11-10 00:21:19 +01:00 by Vyacheslav Kobozev · 12 comments

Cycles, material node editor, RGB-
Blender Version
Broken: 2.78
2016-11-10_012627.png
As you can see.
The first: when I move H to 1, it become`s zero. Ok, I know HSV is circle and it is the same. But still not useful.
But it would be nice if the last H will be not 0=1, but 0.999

CW or CCW modes have correct behavior, because it is impossible to say where 1 from 1, left or right.
Far mode should go the longest way: all around the HSV-circle. And it should looks like this:
2016-11-10_021801.png

For now the solution is set 0.999 on the left color node manually.
idk, may be it is not a bug of Blender, but misunderstanding of Far-mode.

Cycles, material node editor, RGB- **Blender Version** Broken: 2.78 ![2016-11-10_012627.png](https://archive.blender.org/developer/F396056/2016-11-10_012627.png) As you can see. The first: when I move H to 1, it become`s zero. Ok, I know HSV is circle and it is the same. But still not useful. But it would be nice if the last H will be not 0=1, but 0.999 CW or CCW modes have correct behavior, because it is impossible to say where 1 from 1, left or right. Far mode should go the longest way: all around the HSV-circle. And it should looks like this: ![2016-11-10_021801.png](https://archive.blender.org/developer/F396063/2016-11-10_021801.png) For now the solution is set 0.999 on the left color node manually. idk, may be it is not a bug of Blender, but misunderstanding of Far-mode.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

This is partly a limitation of how colours are picked and stored in Blender as RGB values. This means that when selecting a red with a Hue of 0 or 1 it is converted to the same RGB value which is what is stored, The hue value used in the ramp is determined from an RGB to HSL/V conversion. A potential fix for this would mean adding the ability to store Hue values when selecting colours which would result in the correct interpolation.

This is partly a limitation of how colours are picked and stored in Blender as RGB values. This means that when selecting a red with a Hue of 0 or 1 it is converted to the same RGB value which is what is stored, The hue value used in the ramp is determined from an RGB to HSL/V conversion. A potential fix for this would mean adding the ability to store Hue values when selecting colours which would result in the correct interpolation.
Member

The following patch changes the behaviour of the FAR mode to force interpolation if the hues are the same. The direction is set to CW in this case. This also means that you wouldn't be able to set an area of the same colour.

T49979_fix.diff

image.png

The following patch changes the behaviour of the FAR mode to force interpolation if the hues are the same. The direction is set to CW in this case. This also means that you wouldn't be able to set an area of the same colour. [T49979_fix.diff](https://archive.blender.org/developer/F5325495/T49979_fix.diff) ![image.png](https://archive.blender.org/developer/F5325498/image.png)

Still the same problem. Far is not far-around.
070214.jpg

Still the same problem. Far is not far-around. ![070214.jpg](https://archive.blender.org/developer/F6605717/070214.jpg)
Member

Did you apply the patch? This is just a suggested fix and this bug probably needs reviewing by the UI team.

Did you apply the patch? This is just a suggested fix and this bug probably needs reviewing by the UI team.

Okay, I see. Thanks.

Okay, I see. Thanks.

This issue was referenced by 2691dd28e7

This issue was referenced by 2691dd28e7dc085d0ae0aef219c433d4521fc326

Added subscriber: @mont29

Added subscriber: @mont29

Thanks for the patch, added a review about that change (and fixed original patch that had some issues in some cases, e.g. with two stops on red and blue, would generate 1.6666 turn into the hue space ;) ).

Thanks for the patch, added a review about that change (and fixed original patch that had some issues in some cases, e.g. with two stops on red and blue, would generate 1.6666 turn into the hue space ;) ).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49979
No description provided.